--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -194,8 +195,15 @@
         }
 
         @keyframes fadeIn {
-            from { opacity: 0; transform: translateY(20px); }
-            to { opacity: 1; transform: translateY(0); }
+            from {
+                opacity: 0;
+                transform: translateY(20px);
+            }
+
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
         }
 
         .fade-in {
@@ -216,6 +224,22 @@
             background-color: #e65100;
         }
 
+        .skeleton-loader {
+            background: linear-gradient(90deg, #f0f0f0 25%, #e0e0e0 50%, #f0f0f0 75%);
+            background-size: 200% 100%;
+            animation: loading 1.5s infinite;
+        }
+
+        @keyframes loading {
+            0% {
+                background-position: 200% 0;
+            }
+
+            100% {
+                background-position: -200% 0;
+            }
+        }
+
         @media (max-width: 768px) {
             .navbar-nav {
                 flex-direction: row;
@@ -234,6 +258,7 @@
         }
     </style>
 </head>
+
 <body>
     <div class="loading-overlay" id="loadingOverlay">
         <div class="spinner-border" role="status">
@@ -257,159 +282,115 @@
                     <li class="nav-item"><a class="nav-link" href="#" data-category="business">Business</a></li>
                     <li class="nav-item"><a class="nav-link" href="#" data-category="sports">Sports</a></li>
                     <li class="nav-item"><a class="nav-link" href="#" data-category="technology">Technology</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#" data-category="entertainment">Entertainment</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#" data-category="health">Health</a></li>
                 </ul>
-                <form class="d-flex me-2" id="searchForm">
-                    <input class="form-control me-2" type="search" id="newsQuery" placeholder="Search news">
-                    <button class="btn" type="submit" id="searchBtn">
-                        <i class="fas fa-search"></i>
-                    </button>
-                </form>
-                <button id="languageToggle" class="btn">EN</button>
+                <button id="languageToggle" class="btn btn-sm">සිංහල</button>
             </div>
         </div>
     </nav>
 
     <div class="container mt-4">
-        <div class="row fade-in" id="newsType"></div>
-        <div class="row" id="newsdetails"></div>
+        <div class="row" id="newsContainer">
+            <!-- News Cards Will Be Injected Here -->
+        </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script>
         const API_KEY = 'pub_504298067b5256f1070ee4f33fe6174ee16b5';
         const API_URL = 'https://newsdata.io/api/1/news';
-        const TRANSLATION_API_URL = 'https://translation.googleapis.com/language/translate/v2';
-        const TRANSLATION_API_KEY = 'YOUR_GOOGLE_TRANSLATION_API_KEY'; // Replace with your Google Translate API key
+        let language = 'en';
+        const languageToggle = document.getElementById('languageToggle');
+        const newsContainer = document.getElementById('newsContainer');
+        const progressBar = document.getElementById('progressBar');
+        const loadingOverlay = document.getElementById('loadingOverlay');
+        let loadingProgress = 0;
 
-        let currentLanguage = 'en';
-
-        document.addEventListener('DOMContentLoaded', function () {
-            const loadingOverlay = document.getElementById('loadingOverlay');
-            const progressBar = document.getElementById('progressBar');
-            const newsType = document.getElementById('newsType');
-            const newsdetails = document.getElementById('newsdetails');
-            const searchForm = document.getElementById('searchForm');
-            const newsQuery = document.getElementById('newsQuery');
-            const languageToggle = document.getElementById('languageToggle');
-
-            function showLoading() {
-                loadingOverlay.style.display = 'flex';
-                progressBar.style.width = '0%';
-                let progress = 0;
-                const interval = setInterval(() => {
-                    progress += 10;
-                    progressBar.style.width = `${progress}%`;
-                    if (progress >= 100) {
-                        clearInterval(interval);
-                    }
-                }, 200);
-            }
-
-            function hideLoading() {
-                loadingOverlay.style.display = 'none';
-            }
-
-            function createSkeletonLoader() {
-                return `
-                    <div class="col-md-4 mb-4">
-                        <div class="news-card">
-                            <div class="skeleton-loader" style="height: 200px;"></div>
-                            <div class="news-content">
-                                <div class="skeleton-loader" style="height: 24px; width: 80%; margin-bottom: 10px;"></div>
-                                <div class="skeleton-loader" style="height: 16px; width: 100%; margin-bottom: 5px;"></div>
-                                <div class="skeleton-loader" style="height: 16px; width: 70%;"></div>
-                            </div>
-                        </div>
-                    </div>
-                `.repeat(6);
-            }
-
-            async function translateText(text, targetLanguage) {
-                if (!text) return '';
-                try {
-                    const response = await axios.post(`${TRANSLATION_API_URL}?key=${TRANSLATION_API_KEY}`, {
-                        q: text,
-                        target: targetLanguage
-                    });
-                    return response.data.data.translations[0].translatedText;
-                } catch (error) {
-                    console.error('Translation error:', error);
-                    return text;
-                }
-            }
-
-            async function displayNews(articles) {
-                const translatedArticles = await Promise.all(articles.map(async article => ({
-                    ...article,
-                    title: await translateText(article.title, currentLanguage),
-                    description: await translateText(article.description || 'No description available', currentLanguage),
-                    source_name: await translateText(article.source_name || article.source_id, currentLanguage)
-                })));
-
-                newsdetails.innerHTML = translatedArticles.map(article => `
-                    <div class="col-md-4 mb-4">
-                        <div class="news-card">
-                            <img src="${article.image_url || 'https://via.placeholder.com/300x200'}" alt="${article.title}" class="news-image">
-                            <div class="news-content">
-                                <h5 class="news-title">${article.title}</h5>
-                                <p class="news-description">${article.description}</p>
-                                <a href="${article.link}" target="_blank" class="news-source">Source: ${article.source_name}</a>
-                            </div>
-                        </div>
-                    </div>
-                `).join('');
-            }
-
-            async function fetchNews(category = 'top', query = '') {
-                showLoading();
-                newsdetails.innerHTML = createSkeletonLoader();
-                try {
-                    const response = await axios.get(`${API_URL}?apikey=${API_KEY}&language=${currentLanguage}&category=${category}${query ? `&q=${query}` : ''}`);
-                    hideLoading();
-                    if (response.data.status === 'success') {
-                        await displayNews(response.data.results);
-                        const categoryTitle = category === 'top' ? 'Latest News' : category.charAt(0).toUpperCase() + category.slice(1);
-                        newsType.innerHTML = `<h2 class="text-center">${await translateText(categoryTitle, currentLanguage)}</h2>`;
-                    } else {
-                        throw new Error('Failed to fetch news');
-                    }
-                } catch (error) {
-                    console.error('Error fetching news:', error);
-                    hideLoading();
-                    newsdetails.innerHTML = `<p class="text-center">${await translateText('An error occurred while fetching news. Please try again later.', currentLanguage)}</p>`;
-                }
-            }
-
-            // Initial news fetch
+        languageToggle.addEventListener('click', () => {
+            language = language === 'en' ? 'si' : 'en';
+            languageToggle.textContent = language === 'en' ? 'සිංහල' : 'English';
             fetchNews();
+        });
 
-            // Category navigation
-            document.querySelectorAll('.nav-link').forEach(link => {
-                link.addEventListener('click', (e) => {
-                    e.preventDefault();
-                    const category = e.target.dataset.category;
-                    fetchNews(category);
-                });
-            });
-
-            // Search form submission
-            searchForm.addEventListener('submit', (e) => {
-                e.preventDefault();
-                const query = newsQuery.value.trim();
-                if (query) {
-                    fetchNews('top', query);
-                }
-            });
-
-            // Language toggle
-            languageToggle.addEventListener('click', () => {
-                currentLanguage = currentLanguage === 'en' ? 'si' : 'en';
-                languageToggle.textContent = currentLanguage.toUpperCase();
-                fetchNews();
+        document.querySelectorAll('.nav-link').forEach(link => {
+            link.addEventListener('click', event => {
+                event.preventDefault();
+                const category = event.target.dataset.category;
+                fetchNews(category);
             });
         });
+
+        function showLoading() {
+            loadingProgress = 0;
+            progressBar.style.width = `${loadingProgress}%`;
+            loadingOverlay.style.display = 'flex';
+            const progressInterval = setInterval(() => {
+                if (loadingProgress < 90) {
+                    loadingProgress += 1;
+                    progressBar.style.width = `${loadingProgress}%`;
+                } else {
+                    clearInterval(progressInterval);
+                }
+            }, 100);
+        }
+
+        function hideLoading() {
+            loadingProgress = 100;
+            progressBar.style.width = `${loadingProgress}%`;
+            setTimeout(() => {
+                loadingOverlay.style.display = 'none';
+                progressBar.style.width = '0%';
+            }, 300);
+        }
+
+        async function fetchNews(category = 'top') {
+            showLoading();
+            try {
+                const response = await fetch(`${API_URL}?apikey=${API_KEY}&category=${category}&language=${language}`);
+                const data = await response.json();
+
+                // Remove duplicate news items based on the 'title'
+                const uniqueNews = [];
+                const newsMap = new Map();
+
+                data.results.forEach(news => {
+                    if (!newsMap.has(news.title)) {
+                        newsMap.set(news.title, true);
+                        uniqueNews.push(news);
+                    }
+                });
+
+                displayNews(uniqueNews);
+            } catch (error) {
+                console.error('Error fetching news:', error);
+            } finally {
+                hideLoading();
+            }
+        }
+
+        function displayNews(newsList) {
+            newsContainer.innerHTML = '';
+            newsList.forEach(news => {
+                const newsCard = document.createElement('div');
+                newsCard.className = 'col-md-4 fade-in';
+                newsCard.innerHTML = `
+                    <div class="news-card">
+                        <img src="${news.image_url || 'https://via.placeholder.com/300x200'}" class="news-image" alt="News Image">
+                        <div class="news-content">
+                            <h5 class="news-title">${news.title}</h5>
+                            <p class="news-description">${news.description}</p>
+                            <a href="${news.link}" target="_blank" class="news-source">${news.source_id}</a>
+                        </div>
+                    </div>
+                `;
+                newsContainer.appendChild(newsCard);
+            });
+        }
+
+        // Initial Fetch
+        fetchNews();
     </script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
